Bug 1413522 - Use HiDPI icons on Windows for the toolkit warning and question icons, and lower the size of the icons on OSX so the HiDPI versions are not shown blurry. r=nhnt11
MozReview-Commit-ID: 8u3zxE9HiSx

UltraBlame original commit: a74c645411e7a93fd48ec1d4e17c4c771a2339a2

--- a/toolkit/themes/windows/global/global.css
+++ b/toolkit/themes/windows/global/global.css
@@ -532,10 +532,7 @@ alert
 -
 dialog
 #
-info
-\
-.
-icon
+infoIcon
 .
 alert
 -
@@ -628,6 +625,90 @@ png
 "
 )
 ;
+}
+media
+(
+min
+-
+resolution
+:
+1
+.
+1dppx
+)
+{
+.
+alert
+-
+dialog
+#
+infoIcon
+.
+alert
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+warning
+-
+64
+.
+png
+"
+)
+;
+}
+.
+question
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+question
+-
+64
+.
+png
+"
+)
+;
+}
 }
 /
 *
